# HookZzAndroidDemo

./: .gitignore  .gitmodules  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/z/hookzzandroiddemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: hookzz_helper.cpp  native-lib.cpp
app/src/main/java/com/example/z/hookzzandroiddemo/: MainActivity.java
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/z/hookzzandroiddemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
